# zfsmtime

./: LICENSE  README.md  pyproject.toml
systemd/: zfsmtime.service
zfsmtime/: zfsmtime.py
